Add MLflow integration and GPU support for training
This commit adds MLflow for tracking and managing machine learning experiments and sets up GPU support for the training process in `main.ipynb`. A new deployment configuration file is also introduced, which specifies settings for automating uploads to a remote server. Additionally, basic imports like `torch`, `transformers`, and dataset utilities have been introduced for efficient model training and evaluation.

--- a/Researcch/Playground.ipynb
+++ b/Researcch/Playground.ipynb
@@ -247,6 +247,14 @@
    "execution_count": 21
   },
   {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "970770747b33a279"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-12-09T15:49:14.319478Z",
@@ -299,7 +307,12 @@
    "execution_count": 18
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-09T16:08:10.922131Z",
+     "start_time": "2024-12-09T16:08:10.903881Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# Github URL where saved models are stored for this tutorial\n",
@@ -333,8 +346,19 @@
     "            )"
    ],
    "id": "422c8d721d4c49a6",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "saved_models/VisionTransformers/\n",
+      "saved_models/VisionTransformers/ViT.ckpt\n",
+      "saved_models/VisionTransformers/tensorboards/ViT/events.out.tfevents.ViT\n",
+      "saved_models/VisionTransformers/tensorboards/ResNet/events.out.tfevents.resnet\n"
+     ]
+    }
+   ],
+   "execution_count": 22
   },
   {
    "metadata": {
