Add MLflow integration and GPU support for training
This commit adds MLflow for tracking and managing machine learning experiments and sets up GPU support for the training process in `main.ipynb`. A new deployment configuration file is also introduced, which specifies settings for automating uploads to a remote server. Additionally, basic imports like `torch`, `transformers`, and dataset utilities have been introduced for efficient model training and evaluation.

--- a/Researcch/Playground.ipynb
+++ b/Researcch/Playground.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T15:38:58.896636Z",
-     "start_time": "2024-12-09T15:38:28.497040Z"
+     "end_time": "2024-12-09T17:01:11.374066Z",
+     "start_time": "2024-12-09T17:01:04.290268Z"
     }
    },
    "cell_type": "code",
@@ -58,44 +58,11 @@
    "id": "2f8799ad648c89f",
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2876.70s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2882.78s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2888.85s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
       "Requirement already satisfied: seaborn in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (0.13.2)\r\n",
       "Requirement already satisfied: numpy!=1.24.0,>=1.20 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from seaborn) (1.26.4)\r\n",
       "Requirement already satisfied: pandas>=1.2 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from seaborn) (2.2.3)\r\n",
@@ -113,20 +80,7 @@
       "Requirement already satisfied: tzdata>=2022.7 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from pandas>=1.2->seaborn) (2024.2)\r\n",
       "Requirement already satisfied: zipp>=3.1.0 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from importlib-resources>=3.2.0->matplotlib!=3.6.1,>=3.4->seaborn) (3.20.2)\r\n",
       "Requirement already satisfied: six>=1.5 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from python-dateutil>=2.7->matplotlib!=3.6.1,>=3.4->seaborn) (1.16.0)\r\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2894.90s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n",
       "Requirement already satisfied: torchmetrics in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (1.6.0)\r\n",
       "Requirement already satisfied: numpy>1.20.0 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from torchmetrics) (1.26.4)\r\n",
       "Requirement already satisfied: packaging>17.1 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from torchmetrics) (24.1)\r\n",
@@ -154,6 +108,7 @@
       "Requirement already satisfied: nvidia-nvjitlink-cu12 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from nvidia-cusolver-cu12==11.4.5.107->torch>=2.0.0->torchmetrics) (12.6.77)\r\n",
       "Requirement already satisfied: MarkupSafe>=2.0 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from jinja2->torch>=2.0.0->torchmetrics) (2.1.3)\r\n",
       "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from sympy->torch>=2.0.0->torchmetrics) (1.3.0)\r\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
@@ -161,22 +116,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2900.98s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "The tensorboard extension is already loaded. To reload it, use:\n",
-      "  %reload_ext tensorboard\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "/home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
       "Seed set to 42\n"
      ]
     },
@@ -186,9 +127,18 @@
      "text": [
       "Device: cuda:0\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
-   "execution_count": 16
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -201,8 +151,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T15:52:21.369565Z",
-     "start_time": "2024-12-09T15:52:21.360559Z"
+     "end_time": "2024-12-09T17:01:25.075632Z",
+     "start_time": "2024-12-09T17:01:25.068984Z"
     }
    },
    "cell_type": "code",
@@ -214,13 +164,13 @@
    ],
    "id": "97828425d0156cec",
    "outputs": [],
-   "execution_count": 20
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T15:54:14.115936Z",
-     "start_time": "2024-12-09T15:54:14.106863Z"
+     "end_time": "2024-12-09T17:01:30.298755Z",
+     "start_time": "2024-12-09T17:01:30.290591Z"
     }
    },
    "cell_type": "code",
@@ -244,7 +194,7 @@
      ]
     }
    ],
-   "execution_count": 21
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -257,8 +207,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T15:49:14.319478Z",
-     "start_time": "2024-12-09T15:49:14.309558Z"
+     "end_time": "2024-12-09T17:02:21.538750Z",
+     "start_time": "2024-12-09T17:02:21.532569Z"
     }
    },
    "cell_type": "code",
@@ -279,13 +229,13 @@
      ]
     }
    ],
-   "execution_count": 19
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T15:47:59.350351Z",
-     "start_time": "2024-12-09T15:47:59.341280Z"
+     "end_time": "2024-12-09T17:02:26.622575Z",
+     "start_time": "2024-12-09T17:02:26.616542Z"
     }
    },
    "cell_type": "code",
@@ -304,13 +254,13 @@
      ]
     }
    ],
-   "execution_count": 18
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T16:08:10.922131Z",
-     "start_time": "2024-12-09T16:08:10.903881Z"
+     "end_time": "2024-12-09T16:15:10.393300Z",
+     "start_time": "2024-12-09T16:15:10.374330Z"
     }
    },
    "cell_type": "code",
@@ -358,7 +308,7 @@
      ]
     }
    ],
-   "execution_count": 22
+   "execution_count": 23
   },
   {
    "metadata": {
@@ -380,6 +330,30 @@
     }
    ],
    "execution_count": 13
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-09T17:25:15.285524Z",
+     "start_time": "2024-12-09T17:25:15.280247Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "2+2",
+   "id": "41981bc0222834d6",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 1
   }
  ],
  "metadata": {
