Add MLflow integration and GPU support for training
This commit adds MLflow for tracking and managing machine learning experiments and sets up GPU support for the training process in `main.ipynb`. A new deployment configuration file is also introduced, which specifies settings for automating uploads to a remote server. Additionally, basic imports like `torch`, `transformers`, and dataset utilities have been introduced for efficient model training and evaluation.

--- a/Researcch/Playground.ipynb
+++ b/Researcch/Playground.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T17:01:11.374066Z",
-     "start_time": "2024-12-09T17:01:04.290268Z"
+     "end_time": "2024-12-09T17:52:31.058188Z",
+     "start_time": "2024-12-09T17:52:23.954312Z"
     }
    },
    "cell_type": "code",
@@ -151,8 +151,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T17:01:25.075632Z",
-     "start_time": "2024-12-09T17:01:25.068984Z"
+     "end_time": "2024-12-09T17:52:33.788083Z",
+     "start_time": "2024-12-09T17:52:33.782252Z"
     }
    },
    "cell_type": "code",
@@ -169,8 +169,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T17:01:30.298755Z",
-     "start_time": "2024-12-09T17:01:30.290591Z"
+     "end_time": "2024-12-09T17:52:35.686215Z",
+     "start_time": "2024-12-09T17:52:35.679024Z"
     }
    },
    "cell_type": "code",
@@ -190,7 +190,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/tmp/pycharm_project_149/Researcch/saved_models\n"
+      "/tmp/pycharm_project_149/saved_models\n"
      ]
     }
    ],
@@ -207,8 +207,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T17:02:21.538750Z",
-     "start_time": "2024-12-09T17:02:21.532569Z"
+     "end_time": "2024-12-09T17:39:17.468648Z",
+     "start_time": "2024-12-09T17:39:17.462318Z"
     }
    },
    "cell_type": "code",
@@ -234,8 +234,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T17:02:26.622575Z",
-     "start_time": "2024-12-09T17:02:26.616542Z"
+     "end_time": "2024-12-09T17:39:23.227665Z",
+     "start_time": "2024-12-09T17:39:23.221222Z"
     }
    },
    "cell_type": "code",
@@ -259,8 +259,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T16:15:10.393300Z",
-     "start_time": "2024-12-09T16:15:10.374330Z"
+     "end_time": "2024-12-09T17:39:25.432718Z",
+     "start_time": "2024-12-09T17:39:25.420731Z"
     }
    },
    "cell_type": "code",
@@ -308,28 +308,35 @@
      ]
     }
    ],
-   "execution_count": 23
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T15:32:53.936207Z",
-     "start_time": "2024-12-09T15:32:53.925272Z"
+     "end_time": "2024-12-09T17:39:59.215832Z",
+     "start_time": "2024-12-09T17:39:59.208884Z"
     }
    },
    "cell_type": "code",
-   "source": "",
+   "source": [
+    "import os\n",
+    "\n",
+    "# Get the current working directory\n",
+    "current_working_directory = os.getcwd()\n",
+    "\n",
+    "print(f\"The current working directory is: {current_working_directory}\")\n"
+   ],
    "id": "a87f2deee10e6f8",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://raw.githubusercontent.com/phlippe/saved_models/main/tutorial5/tensorboards/ResNet/events.out.tfevents.resnet\n"
+      "The current working directory is: /tmp/pycharm_project_149/Researcch\n"
      ]
     }
    ],
-   "execution_count": 13
+   "execution_count": 7
   },
   {
    "metadata": {
