Add MLflow integration and GPU support for training
This commit adds MLflow for tracking and managing machine learning experiments and sets up GPU support for the training process in `main.ipynb`. A new deployment configuration file is also introduced, which specifies settings for automating uploads to a remote server. Additionally, basic imports like `torch`, `transformers`, and dataset utilities have been introduced for efficient model training and evaluation.

--- a/Researcch/Playground.ipynb
+++ b/Researcch/Playground.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T17:52:31.058188Z",
-     "start_time": "2024-12-09T17:52:23.954312Z"
+     "end_time": "2024-12-09T19:10:29.611631Z",
+     "start_time": "2024-12-09T19:10:22.548126Z"
     }
    },
    "cell_type": "code",
@@ -151,8 +151,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T17:52:33.788083Z",
-     "start_time": "2024-12-09T17:52:33.782252Z"
+     "end_time": "2024-12-09T19:10:34.301381Z",
+     "start_time": "2024-12-09T19:10:34.290134Z"
     }
    },
    "cell_type": "code",
@@ -169,8 +169,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T17:52:35.686215Z",
-     "start_time": "2024-12-09T17:52:35.679024Z"
+     "end_time": "2024-12-09T19:10:39.872333Z",
+     "start_time": "2024-12-09T19:10:39.864350Z"
     }
    },
    "cell_type": "code",
@@ -190,7 +190,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/tmp/pycharm_project_149/saved_models\n"
+      "/tmp/37Ltx4op68/saved_models\n"
      ]
     }
    ],
@@ -207,8 +207,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T17:39:17.468648Z",
-     "start_time": "2024-12-09T17:39:17.462318Z"
+     "end_time": "2024-12-09T19:11:00.626538Z",
+     "start_time": "2024-12-09T19:11:00.619810Z"
     }
    },
    "cell_type": "code",
@@ -225,7 +225,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Runtime Path: ['/snap/pycharm-professional/440/plugins/python/helpers-pro/jupyter_debug', '/snap/pycharm-professional/440/plugins/python-ce/helpers/pydev', '/tmp/pycharm_project_149', '/home/saklani/.conda/envs/dino-tracker/lib/python39.zip', '/home/saklani/.conda/envs/dino-tracker/lib/python3.9', '/home/saklani/.conda/envs/dino-tracker/lib/python3.9/lib-dynload', '', '/home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages', '/home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages/setuptools/_vendor']\n"
+      "Runtime Path: ['/snap/pycharm-professional/440/plugins/python/helpers-pro/jupyter_debug', '/snap/pycharm-professional/440/plugins/python-ce/helpers/pydev', '/tmp/37Ltx4op68', '/home/saklani/.conda/envs/dino-tracker/lib/python39.zip', '/home/saklani/.conda/envs/dino-tracker/lib/python3.9', '/home/saklani/.conda/envs/dino-tracker/lib/python3.9/lib-dynload', '', '/home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages', '/home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages/setuptools/_vendor']\n"
      ]
     }
    ],
@@ -234,8 +234,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T17:39:23.227665Z",
-     "start_time": "2024-12-09T17:39:23.221222Z"
+     "end_time": "2024-12-09T17:53:49.977718Z",
+     "start_time": "2024-12-09T17:53:49.971085Z"
     }
    },
    "cell_type": "code",
@@ -259,8 +259,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T17:39:25.432718Z",
-     "start_time": "2024-12-09T17:39:25.420731Z"
+     "end_time": "2024-12-09T17:53:53.630816Z",
+     "start_time": "2024-12-09T17:53:51.727693Z"
     }
    },
    "cell_type": "code",
@@ -303,8 +303,14 @@
      "text": [
       "saved_models/VisionTransformers/\n",
       "saved_models/VisionTransformers/ViT.ckpt\n",
+      "Downloading https://raw.githubusercontent.com/phlippe/saved_models/main/tutorial15/ViT.ckpt...\n",
+      "https://raw.githubusercontent.com/phlippe/saved_models/main/tutorial15/ViT.ckpt\n",
       "saved_models/VisionTransformers/tensorboards/ViT/events.out.tfevents.ViT\n",
-      "saved_models/VisionTransformers/tensorboards/ResNet/events.out.tfevents.resnet\n"
+      "Downloading https://raw.githubusercontent.com/phlippe/saved_models/main/tutorial15/tensorboards/ViT/events.out.tfevents.ViT...\n",
+      "https://raw.githubusercontent.com/phlippe/saved_models/main/tutorial15/tensorboards/ViT/events.out.tfevents.ViT\n",
+      "saved_models/VisionTransformers/tensorboards/ResNet/events.out.tfevents.resnet\n",
+      "Downloading https://raw.githubusercontent.com/phlippe/saved_models/main/tutorial5/tensorboards/ResNet/events.out.tfevents.resnet...\n",
+      "https://raw.githubusercontent.com/phlippe/saved_models/main/tutorial5/tensorboards/ResNet/events.out.tfevents.resnet\n"
      ]
     }
    ],
@@ -313,8 +319,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T17:39:59.215832Z",
-     "start_time": "2024-12-09T17:39:59.208884Z"
+     "end_time": "2024-12-09T17:55:21.883281Z",
+     "start_time": "2024-12-09T17:55:21.875885Z"
     }
    },
    "cell_type": "code",
@@ -332,7 +338,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The current working directory is: /tmp/pycharm_project_149/Researcch\n"
+      "The current working directory is: /tmp/pycharm_project_149\n"
      ]
     }
    ],
