Add MLflow integration and GPU support for training
This commit adds MLflow for tracking and managing machine learning experiments and sets up GPU support for the training process in `main.ipynb`. A new deployment configuration file is also introduced, which specifies settings for automating uploads to a remote server. Additionally, basic imports like `torch`, `transformers`, and dataset utilities have been introduced for efficient model training and evaluation.

--- a/Researcch/Playground.ipynb
+++ b/Researcch/Playground.ipynb
@@ -346,27 +346,15 @@
   },
   {
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-12-09T17:25:15.285524Z",
-     "start_time": "2024-12-09T17:25:15.280247Z"
+    "jupyter": {
+     "is_executing": true
     }
    },
    "cell_type": "code",
    "source": "2+2+2\n",
    "id": "41981bc0222834d6",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 1
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
