Update deployment paths and adjust Jupyter notebook outputs
This commit revises deployment paths and mapping in the deployment configuration file, improving project setup for remote server management. It also updates the Jupyter notebook to remove unnecessary outputs and modifies execution counts, helping in better tracking and reduced clutter within notebooks. These changes aim to streamline deployment and enhance overall code management.

--- a/Researcch/Playground.ipynb
+++ b/Researcch/Playground.ipynb
@@ -2,9 +2,8 @@
  "cells": [
   {
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-12-09T19:10:29.611631Z",
-     "start_time": "2024-12-09T19:10:22.548126Z"
+    "jupyter": {
+     "is_executing": true
     }
    },
    "cell_type": "code",
@@ -56,89 +55,8 @@
     "print(\"Device:\", device)"
    ],
    "id": "2f8799ad648c89f",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Requirement already satisfied: seaborn in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (0.13.2)\r\n",
-      "Requirement already satisfied: numpy!=1.24.0,>=1.20 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from seaborn) (1.26.4)\r\n",
-      "Requirement already satisfied: pandas>=1.2 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from seaborn) (2.2.3)\r\n",
-      "Requirement already satisfied: matplotlib!=3.6.1,>=3.4 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from seaborn) (3.9.2)\r\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (1.3.0)\r\n",
-      "Requirement already satisfied: cycler>=0.10 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (0.12.1)\r\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (4.54.1)\r\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (1.4.7)\r\n",
-      "Requirement already satisfied: packaging>=20.0 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (24.1)\r\n",
-      "Requirement already satisfied: pillow>=8 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (10.4.0)\r\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (3.1.4)\r\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (2.9.0.post0)\r\n",
-      "Requirement already satisfied: importlib-resources>=3.2.0 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (6.4.5)\r\n",
-      "Requirement already satisfied: pytz>=2020.1 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from pandas>=1.2->seaborn) (2024.1)\r\n",
-      "Requirement already satisfied: tzdata>=2022.7 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from pandas>=1.2->seaborn) (2024.2)\r\n",
-      "Requirement already satisfied: zipp>=3.1.0 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from importlib-resources>=3.2.0->matplotlib!=3.6.1,>=3.4->seaborn) (3.20.2)\r\n",
-      "Requirement already satisfied: six>=1.5 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from python-dateutil>=2.7->matplotlib!=3.6.1,>=3.4->seaborn) (1.16.0)\r\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Requirement already satisfied: torchmetrics in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (1.6.0)\r\n",
-      "Requirement already satisfied: numpy>1.20.0 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from torchmetrics) (1.26.4)\r\n",
-      "Requirement already satisfied: packaging>17.1 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from torchmetrics) (24.1)\r\n",
-      "Requirement already satisfied: torch>=2.0.0 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from torchmetrics) (2.1.0)\r\n",
-      "Requirement already satisfied: lightning-utilities>=0.8.0 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from torchmetrics) (0.11.9)\r\n",
-      "Requirement already satisfied: setuptools in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from lightning-utilities>=0.8.0->torchmetrics) (75.1.0)\r\n",
-      "Requirement already satisfied: typing-extensions in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from lightning-utilities>=0.8.0->torchmetrics) (4.11.0)\r\n",
-      "Requirement already satisfied: filelock in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from torch>=2.0.0->torchmetrics) (3.16.1)\r\n",
-      "Requirement already satisfied: sympy in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from torch>=2.0.0->torchmetrics) (1.13.3)\r\n",
-      "Requirement already satisfied: networkx in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from torch>=2.0.0->torchmetrics) (3.2.1)\r\n",
-      "Requirement already satisfied: jinja2 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from torch>=2.0.0->torchmetrics) (3.1.4)\r\n",
-      "Requirement already satisfied: fsspec in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from torch>=2.0.0->torchmetrics) (2024.9.0)\r\n",
-      "Requirement already satisfied: nvidia-cuda-nvrtc-cu12==12.1.105 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from torch>=2.0.0->torchmetrics) (12.1.105)\r\n",
-      "Requirement already satisfied: nvidia-cuda-runtime-cu12==12.1.105 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from torch>=2.0.0->torchmetrics) (12.1.105)\r\n",
-      "Requirement already satisfied: nvidia-cuda-cupti-cu12==12.1.105 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from torch>=2.0.0->torchmetrics) (12.1.105)\r\n",
-      "Requirement already satisfied: nvidia-cudnn-cu12==8.9.2.26 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from torch>=2.0.0->torchmetrics) (8.9.2.26)\r\n",
-      "Requirement already satisfied: nvidia-cublas-cu12==12.1.3.1 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from torch>=2.0.0->torchmetrics) (12.1.3.1)\r\n",
-      "Requirement already satisfied: nvidia-cufft-cu12==11.0.2.54 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from torch>=2.0.0->torchmetrics) (11.0.2.54)\r\n",
-      "Requirement already satisfied: nvidia-curand-cu12==10.3.2.106 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from torch>=2.0.0->torchmetrics) (10.3.2.106)\r\n",
-      "Requirement already satisfied: nvidia-cusolver-cu12==11.4.5.107 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from torch>=2.0.0->torchmetrics) (11.4.5.107)\r\n",
-      "Requirement already satisfied: nvidia-cusparse-cu12==12.1.0.106 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from torch>=2.0.0->torchmetrics) (12.1.0.106)\r\n",
-      "Requirement already satisfied: nvidia-nccl-cu12==2.18.1 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from torch>=2.0.0->torchmetrics) (2.18.1)\r\n",
-      "Requirement already satisfied: nvidia-nvtx-cu12==12.1.105 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from torch>=2.0.0->torchmetrics) (12.1.105)\r\n",
-      "Requirement already satisfied: triton==2.1.0 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from torch>=2.0.0->torchmetrics) (2.1.0)\r\n",
-      "Requirement already satisfied: nvidia-nvjitlink-cu12 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from nvidia-cusolver-cu12==11.4.5.107->torch>=2.0.0->torchmetrics) (12.6.77)\r\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from jinja2->torch>=2.0.0->torchmetrics) (2.1.3)\r\n",
-      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages (from sympy->torch>=2.0.0->torchmetrics) (1.3.0)\r\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Seed set to 42\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Device: cuda:0\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "execution_count": 1
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -151,8 +69,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T19:10:34.301381Z",
-     "start_time": "2024-12-09T19:10:34.290134Z"
+     "end_time": "2024-12-09T21:15:47.290559Z",
+     "start_time": "2024-12-09T21:15:47.284837Z"
     }
    },
    "cell_type": "code",
@@ -164,13 +82,13 @@
    ],
    "id": "97828425d0156cec",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T19:10:39.872333Z",
-     "start_time": "2024-12-09T19:10:39.864350Z"
+     "end_time": "2024-12-09T21:15:50.525154Z",
+     "start_time": "2024-12-09T21:15:50.518224Z"
     }
    },
    "cell_type": "code",
@@ -190,11 +108,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/tmp/37Ltx4op68/saved_models\n"
+      "/tmp/pycharm_project_149/Researcch/saved_models\n"
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 11
   },
   {
    "metadata": {},
@@ -207,8 +125,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T19:11:00.626538Z",
-     "start_time": "2024-12-09T19:11:00.619810Z"
+     "end_time": "2024-12-09T20:41:23.685068Z",
+     "start_time": "2024-12-09T20:41:23.681920Z"
     }
    },
    "cell_type": "code",
@@ -225,11 +143,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Runtime Path: ['/snap/pycharm-professional/440/plugins/python/helpers-pro/jupyter_debug', '/snap/pycharm-professional/440/plugins/python-ce/helpers/pydev', '/tmp/37Ltx4op68', '/home/saklani/.conda/envs/dino-tracker/lib/python39.zip', '/home/saklani/.conda/envs/dino-tracker/lib/python3.9', '/home/saklani/.conda/envs/dino-tracker/lib/python3.9/lib-dynload', '', '/home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages', '/home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages/setuptools/_vendor']\n"
+      "Runtime Path: ['/snap/pycharm-professional/440/plugins/python/helpers-pro/jupyter_debug', '/snap/pycharm-professional/440/plugins/python-ce/helpers/pydev', '/tmp/pycharm_project_149', '/home/saklani/.conda/envs/dino-tracker/lib/python39.zip', '/home/saklani/.conda/envs/dino-tracker/lib/python3.9', '/home/saklani/.conda/envs/dino-tracker/lib/python3.9/lib-dynload', '', '/home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages', '/home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages/setuptools/_vendor']\n"
      ]
     }
    ],
    "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-09T20:43:15.217454Z",
+     "start_time": "2024-12-09T20:43:15.211304Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import sys\n",
+    "\n",
+    "# Add a new path to the runtime path\n",
+    "sys.path.append('/new/path/to/add')\n",
+    "\n",
+    "# Optionally, remove an existing path\n",
+    "# sys.path.remove('/path/to/remove')"
+   ],
+   "id": "b5c911ee9f847ef2",
+   "outputs": [],
+   "execution_count": 5
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-09T20:43:17.822439Z",
+     "start_time": "2024-12-09T20:43:17.819953Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import sys\n",
+    "print(\"Updated Runtime Path:\", sys.path)"
+   ],
+   "id": "c09edd0cb62078ef",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated Runtime Path: ['/snap/pycharm-professional/440/plugins/python/helpers-pro/jupyter_debug', '/snap/pycharm-professional/440/plugins/python-ce/helpers/pydev', '/tmp/pycharm_project_149', '/home/saklani/.conda/envs/dino-tracker/lib/python39.zip', '/home/saklani/.conda/envs/dino-tracker/lib/python3.9', '/home/saklani/.conda/envs/dino-tracker/lib/python3.9/lib-dynload', '', '/home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages', '/home/saklani/.conda/envs/dino-tracker/lib/python3.9/site-packages/setuptools/_vendor', '/new/path/to/add']\n"
+     ]
+    }
+   ],
+   "execution_count": 6
   },
   {
    "metadata": {
@@ -259,8 +222,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T17:53:53.630816Z",
-     "start_time": "2024-12-09T17:53:51.727693Z"
+     "end_time": "2024-12-09T20:43:50.653283Z",
+     "start_time": "2024-12-09T20:43:50.641017Z"
     }
    },
    "cell_type": "code",
@@ -303,24 +266,18 @@
      "text": [
       "saved_models/VisionTransformers/\n",
       "saved_models/VisionTransformers/ViT.ckpt\n",
-      "Downloading https://raw.githubusercontent.com/phlippe/saved_models/main/tutorial15/ViT.ckpt...\n",
-      "https://raw.githubusercontent.com/phlippe/saved_models/main/tutorial15/ViT.ckpt\n",
       "saved_models/VisionTransformers/tensorboards/ViT/events.out.tfevents.ViT\n",
-      "Downloading https://raw.githubusercontent.com/phlippe/saved_models/main/tutorial15/tensorboards/ViT/events.out.tfevents.ViT...\n",
-      "https://raw.githubusercontent.com/phlippe/saved_models/main/tutorial15/tensorboards/ViT/events.out.tfevents.ViT\n",
-      "saved_models/VisionTransformers/tensorboards/ResNet/events.out.tfevents.resnet\n",
-      "Downloading https://raw.githubusercontent.com/phlippe/saved_models/main/tutorial5/tensorboards/ResNet/events.out.tfevents.resnet...\n",
-      "https://raw.githubusercontent.com/phlippe/saved_models/main/tutorial5/tensorboards/ResNet/events.out.tfevents.resnet\n"
+      "saved_models/VisionTransformers/tensorboards/ResNet/events.out.tfevents.resnet\n"
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T17:55:21.883281Z",
-     "start_time": "2024-12-09T17:55:21.875885Z"
+     "end_time": "2024-12-09T20:43:57.863009Z",
+     "start_time": "2024-12-09T20:43:57.856812Z"
     }
    },
    "cell_type": "code",
@@ -338,23 +295,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The current working directory is: /tmp/pycharm_project_149\n"
+      "The current working directory is: /tmp/pycharm_project_149/Researcch\n"
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 8
   },
   {
    "metadata": {
-    "jupyter": {
-     "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2024-12-09T20:02:21.557692Z",
+     "start_time": "2024-12-09T20:02:21.553227Z"
     }
    },
    "cell_type": "code",
    "source": "2+2+2\n",
    "id": "41981bc0222834d6",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 1
   }
  ],
  "metadata": {
